# propositionallogic

./: CHANGELOG.md  README.md  minimallogic.cabal  propositionallogic.cabal
app/: Main.hs
input_examples/: proof.tppl  std.rdpl
src/: Auxiliary.hs  Parenthesis.hs
src/PropositionalLogic/: Formulas.hs  Operators.hs  Parenthesis.hs  Sequents.hs  Variables.hs
