cabal-version:      2.4
name:               propositionallogic
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A simple propositional logic system implementation in Haskell.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             etudelagirau
maintainer:         emmanueltudela.pro@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    build-depends:    base ^>=4.16.4.0

    -- exposed-modules:

    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
    -- other-modules:

executable propositionallogic
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app, src
    default-language: Haskell2010
